# password-generator

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: gui.kv  gui.py
tests/: test_gui.py
